2000-05-17  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c (gnc_recn_create_tool_bar): add a
	'Finish' reconcile button to the toolbar.

	* src/register/splitreg.c (configLabels): use callbacks to get
	debit/credit headings.

	* src/guile/guile-util.c: new functions to access guile
	debit/credit synonyms by account type.

	* src/scm/prefs.scm: added debit/credit synonym configuration.

2000-05-16  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/guid/guid.h: change the GUID struct to a union with
	an integer to force 32-bit alignment on systems that need it.

	* src/register/splitreg.c (xaccInitSplitRegister): in a currency
	register, set the is_currency flag on the price cell.

	* src/register/pricecell.c (xaccSetPriceCellIsCurrency): function
	to set printing of currency prices in price cells.

	* src/engine/util.c (xaccSPrintAmount): added a PRTCUR flag for
	printing currency prices. Changed flags type from short to unsigned
	int with a typedef of GNCPrintAmountFlags. Changed other files to
	reflect this.

	* src/scm/report/balance-and-pnl.scm: fix html error (fix from
	Martin Schwenke).

	* src/guile/guile-util.c: many bug fixes.

	* src/scm/engine-interface.scm: fix list-ref arg order bug.

	* src/SplitLedger.c (xaccSRCountRows): fix a bug when a two or
	more splits from the same transaction are in the same account. Fix
	other bugs including not accessing deleted splits/transactions.
	Improve the refresh strategy. Could this code get any more
	complicated? Yes...

2000-05-15  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/splitreg.c (xaccSplitRegisterGetCursorTypeRowCol):
	new function, get cursor type by virt row/col.

	* src/scm/report/transaction-report.scm: debits on left, credits
	on right.

	* src/engine/guid/md5.c (md5_process_bytes): fix 32-bit alignment
	bug.

2000-05-14  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/guile/guile-util.c: added several interface functions to